--- a/templates/index.html
+++ b/templates/index.html
@@ -1,9 +1,21 @@
 {% extends "base.html" %}
 {% block title %}Home{% endblock %}
 {% block content %}
-<div class="container">
-	<div class="header center">
-		<h1>NHS Tutor</h1>
+<div class="background">
+	<div class="container center">
+		<div class="header">
+			<h1>NHS Tutor</h1>
+			<br>
+			<div class="row">
+				<div class="col-md-6">
+					<button class="btn btn-success btn-lg">Sign up as a tutor</button>
+				</div>
+				<div class="col-md-6">
+					<button class="btn btn-primary btn-lg">Sign up as a student</button>
+				</div>
+			</div>
+			<br>
+		</div>
 	</div>
 </div>
 {% endblock %}
