--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -2,8 +2,21 @@ h1{
 	text-align: center;
 	font-size: 70px;
 }
+.background{
+	background-image: url('../img/front-img.jpg');
+	width: 100%;
+	height: 100%;
+	background-size: cover;
+}
 .header{
-	padding-top: 25%;
+	padding: 0px -10px 0px;
+	background-color: #ffffff;
+	margin-top: 25%;
+	width: 55%;
+	display: inline-block;
+}
+.header h1{
+	color: #3498db;
 }
 .center{
 	text-align: center;
