--- a/templates/sign_in.html
+++ b/templates/sign_in.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% block title %}Home{% endblock %}
+{% block title %}Sign In{% endblock %}
 {% block content %}
 <div class="container spacer center">
 	<h1>Tutor Sign in</h1>
@@ -26,7 +26,7 @@
 		<div class="row">
 			<div class="col-md-4"></div>
 			<div class="col-md-4">
-				<button type="submit" class="btn btn-lg btn-primary">Sign Up!</button>
+				<button type="submit" class="btn btn-lg btn-primary">Sign in!</button>
 			</div>
 			<div class="col-md-4"></div>
 		</div>
