--- a/templates/index.html
+++ b/templates/index.html
@@ -18,7 +18,7 @@
 					<a href="/signup/tutor"><button class="btn btn-success btn-lg">Sign up as a tutor</button></a>
 				</div>
 				<div class="col-md-6">
-					<a href='/signup/student'><button class="btn btn-primary btn-lg">Sign up as a student</button></a>
+					<a href='/view'><button class="btn btn-success btn-lg">View Sessions</button></a>
 				</div>
 				{% endif %}
 			</div>
