--- a/templates/add.html
+++ b/templates/add.html
@@ -3,46 +3,61 @@
 {% block content %}
 <div class="container spacer">
 	<h1>Add a tutoring session</h1>
+	<br>
 	<div class="error">{{error}}</div>
 	<form action="/add" method="post">
-		<div class="row">
+		<div class="row center">
 			<div class="col-md-4"></div>
-			<div class="col-md-2 form_label">Subject</div>
+			<div class="col-md-2"><h5>Subject</h5></div>
 			<div class="col-md-2">
-				<input type="text" class="form-control" name='subject1' placeholder="AP Computer Science">
-			</div>
-		</div><br>
-		<div class="row">
-			<div class="col-md-4"></div>
-			<div class="col-md-2 form_label">Select Day</div>
-			<div class="col-md-2">
-				<select class="form-control" name='day1'>
-					<option value="monday">Monday</option>
-					<option value="tuesday">Tuesday</option>
-					<option value="wednesday">Wednesday</option>
-					<option value="thursday">Thursday</option>
-					<option value="friday">Friday</option>
+				<select class="form-control" name='subject1'>
+					<option value="Math">Math</option>
+					<option value="Litterature">Litterature</option>
+					<option value="History">History</option>
+					<option value="French">Language (French)</option>
+					<option value="Spanish">Language (Spanish)</option>
+					<option value="Mandarin">Language (Mandarin)</option>
+					<option value="Chemistry">Chemistry</option>
+					<option value="Biology">Biology</option>
+					<option value="Physics">Physics</option>
+					<option value="AMST">Academy Specific (AMST)</option>
+					<option value="AAST">Academy Specific (AAST)</option>
+					<option value="AEDT">Academy Specific (AEDT)</option>
+					<option value="ATCS">Academy Specific (ATCS)</option>
+					<option value="ABF">Academy Specific (ABF)</option>
+					<option value="ACAHA">Academy Specific (ACAHA)</option>
+					<option value="AVPA-">Academy Specific (AVPA-T)</option>
+					<option value="AVPA-M">Academy Specific (AVPA-M)</option>
+					<option value="AVPA-V">Academy Specific (AVPA-V)</option>
 				</select>
 			</div>
 		</div><br>
 		<div class="row">
-			<div class="col-md-4"></div>
-			<div class="col-md-2 form_label">Mods</div>
-			<div class="col-md-2">
-				<select class="form-control" name='mods1'>
-					<option value="1-3">1-3</option>
-					<option value="4-6">4-6</option>
-					<option value="7-9">7-9</option>
-					<option value="10-12">10-12</option>
-					<option value="13-15">13-15</option>
-					<option value="16-18">16-18</option>
-					<option value="19-21">19-21</option>
-					<option value="22-24">22-24</option>
-					<option value="24-27">24-27</option>
-				</select>
+			<div class="col-md-12">
+				<div class="col-md-1"></div>
+				<div class="col-md-2">
+					<h5>Monday</h5>
+					<input class="form-control" name="mods_monday_1" placeholder='1-3'>
+				</div>
+				<div class="col-md-2">
+					<h5>Tuesday</h5>
+					<input class="form-control" name="mods_tuesday_1" placeholder='1-3'>
+				</div>
+				<div class="col-md-2">
+					<h5>Wednesday</h5>
+					<input class="form-control" name="mods_wednesday_1" placeholder='1-3'>
+				</div>
+				<div class="col-md-2">
+					<h5>Thursday</h5>
+					<input class="form-control" name="mods_thursday_1" placeholder='1-3'>
+				</div>
+				<div class="col-md-2">
+					<h5>Friday</h5>
+					<input class="form-control" name="mods_friday_1" placeholder='1-3'>
+				</div>
 			</div>
 		</div><br>
-		<div class="extra"></div>
+		<div class="extra"></div><br>
 		<div class="row center">
 			<div class="col-md-3"></div>
 			<div class="col-md-3">
@@ -58,42 +73,55 @@
 <script type="text/javascript">
 	var number = 2;
 	function add () {
-		$('.extra').append('<div class="row"> \
+		$('.extra').append('<hr><div class="row center"> \
 			<div class="col-md-4"></div> \
-			<div class="col-md-2 form_label">Subject</div> \
+			<div class="col-md-2"><h5>Subject</h5></div> \
 			<div class="col-md-2"> \
-				<input type="text" class="form-control" name="subject'+number+'" placeholder="AP Computer Science"> \
-			</div> \
-		</div><br> \
-		<div class="row"> \
-			<div class="col-md-4"></div> \
-			<div class="col-md-2 form_label">Select Day</div> \
-			<div class="col-md-2"> \
-				<select class="form-control" name="day'+number+'"> \
-					<option value="monday">Monday</option> \
-					<option value="tuesday">Tuesday</option> \
-					<option value="wednesday">Wednesday</option> \
-					<option value="thursday">Thursday</option> \
-					<option value="friday">Friday</option> \
+				<select class="form-control" name="subject'+number+'"> \
+					<option value="Math">Math</option> \
+					<option value="Litterature">Litterature</option> \
+					<option value="History">History</option> \
+					<option value="French">Language (French)</option> \
+					<option value="Spanish">Language (Spanish)</option> \
+					<option value="Mandarin">Language (Mandarin)</option> \
+					<option value="Chemistry">Chemistry</option> \
+					<option value="Biology">Biology</option> \
+					<option value="Physics">Physics</option> \
+					<option value="AMST">Academy Specific (AMST)</option> \
+					<option value="AAST">Academy Specific (AAST)</option> \
+					<option value="AEDT">Academy Specific (AEDT)</option> \
+					<option value="ATCS">Academy Specific (ATCS)</option> \
+					<option value="ABF">Academy Specific (ABF)</option> \
+					<option value="ACAHA">Academy Specific (ACAHA)</option> \
+					<option value="AVPA-">Academy Specific (AVPA-T)</option> \
+					<option value="AVPA-M">Academy Specific (AVPA-M)</option> \
+					<option value="AVPA-V">Academy Specific (AVPA-V)</option> \
 				</select> \
 			</div> \
 		</div><br> \
 		<div class="row"> \
-			<div class="col-md-4"></div> \
-			<div class="col-md-2 form_label">Mods</div> \
-			<div class="col-md-2"> \
-				<select class="form-control" name="mods'+number+'"> \
-					<option value="1">1-3</option> \
-					<option value="2">4-6</option> \
-					<option value="3">7-9</option> \
-					<option value="4">10-12</option> \
-					<option value="5">13-15</option> \
-					<option value="6">16-18</option> \
-					<option value="7">19-21</option> \
-					<option value="8">22-24</option> \
-					<option value="9">24-27</option> \
-				</select> \
-			</div> \
+			<div class="col-md-12"> \
+				<div class="col-md-1"></div> \
+				<div class="col-md-2"> \
+					<h5>Monday</h5> \
+					<input class="form-control" name="mods_monday_'+number+'" placeholder="1-3"> \
+				</div> \
+				<div class="col-md-2"> \
+					<h5>Tuesday</h5> \
+					<input class="form-control" name="mods_tuesday_'+number+'" placeholder="1-3"> \
+				</div> \
+				<div class="col-md-2"> \
+					<h5>Wednesday</h5> \
+					<input class="form-control" name="mods_wednesday_'+number+'" placeholder="1-3"> \
+				</div> \
+				<div class="col-md-2"> \
+					<h5>Thursday</h5> \
+					<input class="form-control" name="mods_thursday_'+number+'" placeholder="1-3"> \
+				</div> \
+				<div class="col-md-2"> \
+					<h5>Friday</h5> \
+					<input class="form-control" name="mods_friday_'+number+'" placeholder="1-3"> \
+				</div> \
 		</div><br>');
 		number +=1;
 	}
