--- a/templates/base.html
+++ b/templates/base.html
@@ -14,18 +14,22 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">NHS Tutor</a>
+          <a class="navbar-brand" href="/">NHS Tutor</a>
         </div>
         <div class="navbar-collapse collapse navbar-inverse-collapse">
         {% if signed_in %}
         <ul class="nav navbar-nav">
             <li><a href="/add">Add a session</a></li>
+            <li><a href="/view">View Sessions</a></li>
+            <li><a href="/view">View My Sessions</a></li>
         </ul>
         <ul class="nav navbar-nav navbar-right">
             <li><a href="/logout">Sign Out</a></li>
         </ul>
         {% else %}
-        <ul class="nav navbar-nav"></ul>
+        <ul class="nav navbar-nav">
+            <li><a href="/view">View Sessions</a></li>
+        </ul>
         <ul class="nav navbar-nav navbar-right">
             <li><a href="/signup/tutor">Sign Up</a></li>
             <li><a href="/signin">Sign In</a></li>
