--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -39,4 +39,10 @@ table, th, td {
 	border: 1px solid #2c3e50 !important;
 	color: black !important;
 	text-align: center;
+	word-wrap: break-word;
+}
+td{
+	min-height: 150px;
+	min-width: 60px;
+	max-width: 175px; !important
 }
