--- a/templates/base.html
+++ b/templates/base.html
@@ -1,4 +1,4 @@
-<html>
+<html lang="en">
 	<head>
 		<title>{% block title %}{% endblock %}</title>
     <link rel="stylesheet" type="text/css" href="/static/css/bootstrap.min.css">
@@ -21,7 +21,7 @@
         <ul class="nav navbar-nav">
             <li><a href="/add">Add a session</a></li>
             <li><a href="/view">View Sessions</a></li>
-            <li><a href="/view">View My Sessions</a></li>
+            <li><a href="/my-sessions">View My Sessions</a></li>
         </ul>
         <ul class="nav navbar-nav navbar-right">
             <li><a href="/logout">Sign Out</a></li>
