--- a/templates/view_subject.html
+++ b/templates/view_subject.html
@@ -14,76 +14,77 @@
 		</tr>
 		<tr>
 			<td>1-3</td>
-			<td>{{monday['1-3'] |replace("[]", "")}}</td>
-			<td>{{tuesday['1-3'] |replace("[]", "")}}</td>
-			<td>{{wednesday['1-3'] |replace("[]", "")}}</td>
-			<td>{{thursday['1-3'] |replace("[]", "")}}</td>
-			<td>{{friday['1-3'] |replace("[]", "")}}</td>
+			<td>{% for tutor in monday['1-3'] %}<a href="mailto:{{tutor.split('-')[1]}}">{{tutor.split('-')[0]}}</a><br> {% endfor %}</td>
+			<td>{% for tutor in tuesday['1-3'] %}<a href="mailto:{{tutor.split('-')[1]}}">{{tutor.split('-')[0]}}</a><br>{% endfor %}</td>
+			<td>{% for tutor in wednesday['1-3'] %}<a href="mailto:{{tutor.split('-')[1]}}">{{tutor.split('-')[0]}}</a><br> {% endfor %}</td>
+			<td>{% for tutor in thursday['1-3'] %}<a href="mailto:{{tutor.split('-')[1]}}">{{tutor.split('-')[0]}}</a><br> {% endfor %}</td>
+			<td>{% for tutor in friday['1-3'] %}<a href="mailto:{{tutor.split('-')[1]}}">{{tutor.split('-')[0]}}</a><br> {% endfor %}</td>
 		</tr>
 		<tr>
 			<td>4-6</td>
-			<td>{{monday['4-6'] |replace("[]", "")}}</td>
-			<td>{{tuesday['4-6'] |replace("[]", "")}}</td>
-			<td>{{wednesday['4-6'] |replace("[]", "")}}</td>
-			<td>{{thursday['4-6'] |replace("[]", "")}}</td>
-			<td>{{friday['4-6'] |replace("[]", "")}}</td>
+			<td>{% for tutor in monday['4-6'] %}<a href="mailto:{{tutor.split('-')[1]}}">{{tutor.split('-')[0]}}</a><br>{% endfor %}</td>
+			<td>{% for tutor in tuesday['4-6'] %}<a href="mailto:{{tutor.split('-')[1]}}">{{tutor.split('-')[0]}}</a><br>{% endfor %}</td>
+			<td>{% for tutor in wednesday['4-6'] %}<a href="mailto:{{tutor.split('-')[1]}}">{{tutor.split('-')[0]}}</a><br>{% endfor %}</td>
+			<td>{% for tutor in thursday['4-6'] %}<a href="mailto:{{tutor.split('-')[1]}}">{{tutor.split('-')[0]}}</a><br>{% endfor %}</td>
+			<td>{% for tutor in friday['4-6'] %}<a href="mailto:{{tutor.split('-')[1]}}">{{tutor.split('-')[0]}}</a><br>{% endfor %}</td>
 		</tr>
 		<tr>
 			<td>7-9</td>
-			<td>{{monday['7-9'] |replace("[]", "")}}</td>
-			<td>{{tuesday['7-9'] |replace("[]", "")}}</td>
-			<td>{{wednesday['7-9'] |replace("[]", "")}}</td>
-			<td>{{thursday['7-9'] |replace("[]", "")}}</td>
-			<td>{{friday['7-9'] |replace("[]", "")}}</td>
+			<td>{% for tutor in monday['7-9'] %}<a href="mailto:{{tutor.split('-')[1]}}">{{tutor.split('-')[0]}}</a><br>{% endfor %}</td>
+			<td>{% for tutor in tuesday['7-9'] %}<a href="mailto:{{tutor.split('-')[1]}}">{{tutor.split('-')[0]}}</a><br>{% endfor %}</td>
+			<td>{% for tutor in wednesday['7-9'] %}<a href="mailto:{{tutor.split('-')[1]}}">{{tutor.split('-')[0]}}</a><br>{% endfor %}</td>
+			<td>{% for tutor in thursday['7-9'] %}<a href="mailto:{{tutor.split('-')[1]}}">{{tutor.split('-')[0]}}</a><br>{% endfor %}</td>
+			<td>{% for tutor in friday['7-9'] %}<a href="mailto:{{tutor.split('-')[1]}}">{{tutor.split('-')[0]}}</a><br>{% endfor %}</td>
 		</tr>
 		<tr>
 			<td>10-12</td>
-			<td>{{monday['10-12'] |replace("[]", "")}}</td>
-			<td>{{tuesday['10-12'] |replace("[]", "")}}</td>
-			<td>{{wednesday['10-12'] |replace("[]", "")}}</td>
-			<td>{{thursday['10-12'] |replace("[]", "")}}</td>
-			<td>{{friday['10-12'] |replace("[]", "")}}</td>
+			<td>{% for tutor in monday['10-12'] %}<a href="mailto:{{tutor.split('-')[1]}}">{{tutor.split('-')[0]}}</a><br>{% endfor %}</td>
+			<td>{% for tutor in tuesday['10-12'] %}<a href="mailto:{{tutor.split('-')[1]}}">{{tutor.split('-')[0]}}</a><br>{% endfor %}</td>
+			<td>{% for tutor in wednesday['10-12'] %}<a href="mailto:{{tutor.split('-')[1]}}">{{tutor.split('-')[0]}}</a><br>{% endfor %}</td>
+			<td>{% for tutor in thursday['10-12'] %}<a href="mailto:{{tutor.split('-')[1]}}">{{tutor.split('-')[0]}}</a><br>{% endfor %}</td>
+			<td>{% for tutor in friday['10-12'] %}<a href="mailto:{{tutor.split('-')[1]}}">{{tutor.split('-')[0]}}</a><br>{% endfor %}</td>
 		</tr>
 		<tr>
 			<td>13-15</td>
-			<td>{{monday['13-15'] |replace("[]", "")}}</td>
-			<td>{{tuesday['13-15'] |replace("[]", "")}}</td>
-			<td>{{wednesday['13-15'] |replace("[]", "")}}</td>
-			<td>{{thursday['13-15'] |replace("[]", "")}}</td>
-			<td>{{friday['13-15'] |replace("[]", "")}}</td>
+			<td>{% for tutor in monday['13-15'] %}<a href="mailto:{{tutor.split('-')[1]}}">{{tutor.split('-')[0]}}</a><br>{% endfor %}</td>
+			<td>{% for tutor in tuesday['13-15'] %}<a href="mailto:{{tutor.split('-')[1]}}">{{tutor.split('-')[0]}}</a><br>{% endfor %}</td>
+			<td>{% for tutor in wednesday['13-15'] %}<a href="mailto:{{tutor.split('-')[1]}}">{{tutor.split('-')[0]}}</a><br>{% endfor %}</td>
+			<td>{% for tutor in thursday['13-15'] %}<a href="mailto:{{tutor.split('-')[1]}}">{{tutor.split('-')[0]}}</a><br>{% endfor %}</td>
+			<td>{% for tutor in friday['13-15'] %}<a href="mailto:{{tutor.split('-')[1]}}">{{tutor.split('-')[0]}}</a><br>{% endfor %}</td>
 		</tr>
 		<tr>
 			<td>16-18</td>
-			<td>{{monday['16-18'] |replace("[]", "")}}</td>
-			<td>{{tuesday['16-18'] |replace("[]", "")}}</td>
-			<td>{{wednesday['16-18'] |replace("[]", "")}}</td>
-			<td>{{thursday['16-18'] |replace("[]", "")}}</td>
-			<td>{{friday['16-18'] |replace("[]", "")}}</td>
+			<td>{% for tutor in monday['16-18'] %}<a href="mailto:{{tutor.split('-')[1]}}">{{tutor.split('-')[0]}}</a><br>{% endfor %}</td>
+			<td>{% for tutor in tuesday['16-18'] %}<a href="mailto:{{tutor.split('-')[1]}}">{{tutor.split('-')[0]}}</a><br>{% endfor %}</td>
+			<td>{% for tutor in wednesday['16-18'] %}<a href="mailto:{{tutor.split('-')[1]}}">{{tutor.split('-')[0]}}</a><br>{% endfor %}</td>
+			<td>{% for tutor in thursday['16-18'] %}<a href="mailto:{{tutor.split('-')[1]}}">{{tutor.split('-')[0]}}</a><br>{% endfor %}</td>
+			<td>{% for tutor in friday['16-18'] %}<a href="mailto:{{tutor.split('-')[1]}}">{{tutor.split('-')[0]}}</a><br>{% endfor %}</td>
 		</tr>
 		<tr>
 			<td>19-21</td>
-			<td>{{monday['19-21'] |replace("[]", "")}}</td>
-			<td>{{tuesday['19-21'] |replace("[]", "")}}</td>
-			<td>{{wednesday['19-21'] |replace("[]", "")}}</td>
-			<td>{{thursday['19-21'] |replace("[]", "")}}</td>
-			<td>{{friday['19-21'] |replace("[]", "")}}</td>
+			<td>{% for tutor in monday['19-21'] %}<a href="mailto:{{tutor.split('-')[1]}}">{{tutor.split('-')[0]}}</a><br>{% endfor %}</td>
+			<td>{% for tutor in tuesday['19-21'] %}<a href="mailto:{{tutor.split('-')[1]}}">{{tutor.split('-')[0]}}</a><br>{% endfor %}</td>
+			<td>{% for tutor in wednesday['19-21'] %}<a href="mailto:{{tutor.split('-')[1]}}">{{tutor.split('-')[0]}}</a><br>{% endfor %}</td>
+			<td>{% for tutor in thursday['19-21'] %}<a href="mailto:{{tutor.split('-')[1]}}">{{tutor.split('-')[0]}}</a><br>{% endfor %}</td>
+			<td>{% for tutor in friday['19-21'] %}<a href="mailto:{{tutor.split('-')[1]}}">{{tutor.split('-')[0]}}</a><br>{% endfor %}</td>
 		</tr>
 		<tr>
 			<td>22-24</td>
-			<td>{{monday['22-24'] |replace("[]", "")}}</td>
-			<td>{{tuesday['22-24'] |replace("[]", "")}}</td>
-			<td>{{wednesday['22-24'] |replace("[]", "")}}</td>
-			<td>{{thursday['22-24'] |replace("[]", "")}}</td>
-			<td>{{friday['22-24'] |replace("[]", "")}}</td>
+			<td>{% for tutor in monday['22-24'] %}<a href="mailto:{{tutor.split('-')[1]}}">{{tutor.split('-')[0]}}</a><br>{% endfor %}</td>
+			<td>{% for tutor in tuesday['22-24'] %}<a href="mailto:{{tutor.split('-')[1]}}">{{tutor.split('-')[0]}}</a><br>{% endfor %}</td>
+			<td>{% for tutor in wednesday['22-24'] %}<a href="mailto:{{tutor.split('-')[1]}}">{{tutor.split('-')[0]}}</a><br>{% endfor %}</td>
+			<td>{% for tutor in thursday['22-24'] %}<a href="mailto:{{tutor.split('-')[1]}}">{{tutor.split('-')[0]}}</a><br>{% endfor %}</td>
+			<td>{% for tutor in friday['22-24'] %}<a href="mailto:{{tutor.split('-')[1]}}">{{tutor.split('-')[0]}}</a><br>{% endfor %}</td>
 		</tr>
 		<tr>
 			<td>25-27</td>
-			<td>{{monday['25-27'] |replace("[]", "")}}</td>
-			<td>{{tuesday['25-27'] |replace("[]", "")}}</td>
-			<td>{{wednesday['25-27'] |replace("[]", "")}}</td>
-			<td>{{thursday['25-27'] |replace("[]", "")}}</td>
-			<td>{{friday['25-27'] |replace("[]", "")}}</td>
+			<td>{% for tutor in monday['25-27'] %}<a href="mailto:{{tutor.split('-')[1]}}">{{tutor.split('-')[0]}}</a><br>{% endfor %}</td>
+			<td>{% for tutor in tuesday['25-27'] %}<a href="mailto:{{tutor.split('-')[1]}}">{{tutor.split('-')[0]}}</a><br>{% endfor %}</td>
+			<td>{% for tutor in wednesday['25-27'] %}<a href="mailto:{{tutor.split('-')[1]}}">{{tutor.split('-')[0]}}</a><br>{% endfor %}</td>
+			<td>{% for tutor in thursday['25-27'] %}<a href="mailto:{{tutor.split('-')[1]}}">{{tutor.split('-')[0]}}</a><br>{% endfor %}</td>
+			<td>{% for tutor in friday['25-27'] %}<a href="mailto:{{tutor.split('-')[1]}}">{{tutor.split('-')[0]}}</a><br>{% endfor %}</td>
 		</tr>
 	</table>
 </div>
+
 {% endblock %}
