--- a/templates/add.html
+++ b/templates/add.html
@@ -12,7 +12,7 @@
 			<div class="col-md-2">
 				<select class="form-control" name='subject1'>
 					<option value="Math">Math</option>
-					<option value="Litterature">Litterature</option>
+					<option value="Litterature">Literature</option>
 					<option value="History">History</option>
 					<option value="French">Language (French)</option>
 					<option value="Spanish">Language (Spanish)</option>
