--- a/templates/view.html
+++ b/templates/view.html
@@ -9,7 +9,7 @@
 		<div class="col-md-4">
 				<select class="form-control" name='subject'>
 					<option value="Math">Math</option>
-					<option value="Litterature">Litterature</option>
+					<option value="Litterature">Literature</option>
 					<option value="History">History</option>
 					<option value="French">Language (French)</option>
 					<option value="Spanish">Language (Spanish)</option>
