--- a/templates/view.html
+++ b/templates/view.html
@@ -26,6 +26,8 @@
 					<option value="AVPA-">Academy Specific (AVPA-T)</option>
 					<option value="AVPA-M">Academy Specific (AVPA-M)</option>
 					<option value="AVPA-V">Academy Specific (AVPA-V)</option>
+					<option value="SAT">SAT</option>
+					<option value="ACT">ACT</option>
 				</select>
 		</div>
 		<div class="col-md-4"></div>
