--- a/templates/signup_tutor.html
+++ b/templates/signup_tutor.html
@@ -10,7 +10,7 @@
 			<div class="col-md-4"></div>
 			<div class="col-md-2 form_label">Full Name</div>
 			<div class="col-md-2 {% if full_name_error %}has-error{% endif %}">
-				<input type="text" class="form-control" name='full_name' placeholder="Paras Modi" {% if variables %}value="{{variables['full_name']}}"{% endif %}>
+				<input type="text" class="form-control" name='full_name' placeholder="Ben Clauss" {% if variables %}value="{{variables['full_name']}}"{% endif %}>
 			</div>
 			<div class="col-md-6"></div>
 		</div><br>
@@ -19,7 +19,7 @@
 			<div class="col-md-4"></div>
 			<div class="col-md-2 form_label">Username</div>
 			<div class="col-md-2 {% if username_error %}has-error{% endif %}">
-				<input type="text" class="form-control" name='username' placeholder="parmod" {% if variables %}value="{{variables['username']}}"{% endif %}>
+				<input type="text" class="form-control" name='username' placeholder="bencla" {% if variables %}value="{{variables['username']}}"{% endif %}>
 			</div>
 			<div class="col-md-6"></div>
 		</div><br>
