--- a/templates/signin.html
+++ b/templates/signin.html
@@ -10,7 +10,7 @@
 			<div class="col-md-4"></div>
 			<div class="col-md-2 form_label">Username</div>
 			<div class="col-md-2 {% if username_error %}has-error{% endif %}">
-				<input type="text" class="form-control" name='username' placeholder="parmod" {% if variables %}value="{{variables['username']}}"{% endif %}>
+				<input type="text" class="form-control" name='username' placeholder="bencla" {% if variables %}value="{{variables['username']}}"{% endif %}>
 			</div>
 			<div class="col-md-6"></div>
 		</div><br>
