--- a/templates/base.html
+++ b/templates/base.html
@@ -15,7 +15,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="/"><img class="logo" src="/static/img/logo.png"><b>BCA NHS</b></a>
+          <a class="navbar-brand" href="/"><img class="logo" src="/static/img/logo.png">BCA NHS</a>
         </div>
         <div class="navbar-collapse collapse navbar-inverse-collapse">
 
