Added points page

--- a/templates/404.html
+++ b/templates/404.html
@@ -2,6 +2,14 @@
 {% block title %}Page Not Found{% endblock %}
 {% block content %}
 <div class="container center spacer">
-	<h1>404 page not found</h1>
+	<div class="row center">
+		<div class="col-md-8 col-md-offset-2">
+			<h1>404</h1>
+			<h2>Uh Oh! Page not found.</h2>
+			<h2>If something went wrong, contact an NHS board member.</h2>
+		</div>
+		<div class="col-md-2">
+		</div>
+	</div>
 </div>
 {% endblock %}
