--- a/templates/500.html
+++ b/templates/500.html
@@ -2,7 +2,14 @@
 {% block title %}Broken{% endblock %}
 {% block content %}
 <div class="container center spacer">
-	<h1>SOMETHING WENT WRONG?!?!</h1>
-	<h3>Its being fixed</h3>
+	<div class="row center">
+		<div class="col-md-8 col-md-offset-2">
+			<h1>500</h1>
+			<h2>Uh Oh! Something went wrong.</h2>
+			<h2>Please contact an NHS board member and tell them what happened so we can fix this.</h2>
+		</div>
+		<div class="col-md-2">
+		</div>
+	</div>
 </div>
 {% endblock %}
