--- a/templates/add.html
+++ b/templates/add.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block title %}Add A Session{% endblock %}
 {% block content %}
-<div class="container spacer">
+<div class="container center spacer">
 	<h1>Add a tutoring session</h1>
 	<br>
 	<div class="error">{{error}}</div>
