--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -1,5 +1,4 @@
 h1{
-	text-align: center;
 	font-size: 70px;
 }
 .center{
@@ -17,6 +16,9 @@ h1{
 }
 .spacer{
 	margin-top: 13%;
+}
+.small-spacer{
+	margin-top: 6%;
 }
 .form_label{
 	margin-top: 10px;
@@ -39,7 +41,7 @@ td{
 }
 .logo{
 	height: 70px;
-	width: 60px;
+	width: 50px;
 	margin-top: -10px;
 	margin-right: 10px;
 	float: left;
