--- a/templates/base.html
+++ b/templates/base.html
@@ -5,44 +5,48 @@
         <link rel="stylesheet" type="text/css" href="/static/css/custom.css">
         <script src="/static/js/jquery.min.js"></script>
         <script src="/static/js/bootstrap.min.js"></script>
+        <meta name="description" content="Bergen County Academy's Chapter of National Honor Society">
         <link rel="icon" type="image/png" href="/static/img/logo.png" />
 	</head>
 	<body>
     <div class="navbar navbar-default navbar-fixed-top">
         <div class="navbar-header">
-          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-inverse-collapse">
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand" href="/"><img class="logo" src="/static/img/logo.png">BCA NHS</a>
+            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-inverse-collapse">
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" href="/"><img class="logo" src="/static/img/logo.png">BCA NHS</a>
         </div>
+        
         <div class="navbar-collapse collapse navbar-inverse-collapse">
 
+            <ul class="nav navbar-nav navbar-right">
 
+                <li class="dropdown">
+                  <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="true">Tutoring <span class="caret"></span></a>
+                  <ul class="dropdown-menu" role="menu">
+                    {% if signed_in %}
+                    <li><a href="/view">View Sessions</a></li>
+                    <li class="divider"></li>
+                    <li><a href="/logout"><b>SIGN OUT</b></a></li>
+                    <li><a href="/add">Add a Session</a></li>
+                    <li><a href="/my-sessions">View My Sessions</a></li>
+                    <li><a href="https://drive.google.com/file/d/0B-b_N1cpnpZ7WHAwcy1zd3ZaUmc/view?usp=sharing">Signoff Sheet</a></li>
+                    <li><a href="/points">Points</a></li>
+                    {% else %}
+                    <li><a href="/view">View Sessions</a></li>
+                    <li class="divider"></li>
+                    <li class="dropdown-header">NHS Members</li>
+                    <li><a href="/signup/tutor"><b>SIGN UP</b></a></li>
+                    <li><a href="/signin"><b>SIGN IN</b></a></li>
+                    <li><a href="https://drive.google.com/file/d/0B-b_N1cpnpZ7WHAwcy1zd3ZaUmc/view?usp=sharing">Signoff Sheet</a></li>
+                    <li><a href="/points">Points</a></li>
+                    {% endif %}
+                  </ul>
+                </li>
 
-        {% if signed_in %}
-        <ul class="nav navbar-nav">
-            <li><a href="/add">Add a session</a></li>
-            <li><a href="/view">View Sessions</a></li>
-            <li><a href="/my-sessions">View My Sessions</a></li>
-        </ul>
-        <ul class="nav navbar-nav navbar-right">
-            <li><a href="/logout">Sign Out</a></li>
-        </ul>
-        {% else %}
-        <ul class="nav navbar-nav">
-            <li><a href="/view">View Sessions</a></li>
-        </ul>
-        <ul class="nav navbar-nav navbar-right">
-            <li><a href="/signup/tutor">Sign Up</a></li>
-            <li><a href="/signin">Sign In</a></li>
-        </ul>
-        {% endif %}
-
-
-
-        
+            </ul>
         </div>
     </div>
     {% block content %}
