--- a/templates/index.html
+++ b/templates/index.html
@@ -6,28 +6,21 @@
     <ol class="carousel-indicators">
         <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
         <li data-target="#myCarousel" data-slide-to="1"></li>
-<!--         <li data-target="#myCarousel" data-slide-to="2"></li>
- -->    </ol>
+    </ol>
 
     <div class="carousel-inner">
         <div class="item active">
             <div class="fill" style="background-image:url('/static/img/slideshow/1.JPG');"></div>
             <div class="carousel-caption">
-                <h1>Bergen County Academies <b>National Honor Society</b></h1>
+                <h1><b>BERGEN COUNTY ACADEMIES</b><br><span class="white">National Honor Society</span></h1>
             </div>
         </div>
         <div class="item">
             <div class="fill" style="background-image:url('/static/img/slideshow/2.JPG');"></div>
             <div class="carousel-caption">
-                <h2>Induction Pictures Coming Soon</h2>
+                <h1><a href="/officers">NHS BOARD</a></h1><h2>Have a question? Contact these board members.</h2>
             </div>
         </div>
-<!--         <div class="item">
-            <div class="fill" style="background-image:url('http://placehold.it/1900x1080&text=Slide Three');"></div>
-            <div class="carousel-caption">
-                <h2>Caption 3</h2>
-            </div>
-        </div> -->
     </div>
 
     <a class="left carousel-control" href="#myCarousel" data-slide="prev">
