--- a/templates/base.html
+++ b/templates/base.html
@@ -8,48 +8,74 @@
         <meta name="description" content="Bergen County Academy's Chapter of National Honor Society">
         <link rel="icon" type="image/png" href="/static/img/logo.png" />
 	</head>
+
 	<body>
-    <div class="navbar navbar-default navbar-fixed-top">
-        <div class="navbar-header">
-            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-inverse-collapse">
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-            </button>
-            <a class="navbar-brand" href="/"><img class="logo" src="/static/img/logo.png">BCA NHS</a>
+        <div class="navbar navbar-default navbar-fixed-top">
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-inverse-collapse">
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand" href="/"><img class="logo" src="/static/img/logo.png">BCA NHS</a>
+            </div>
+            
+            <div class="navbar-collapse collapse navbar-inverse-collapse">
+
+                <ul class="nav navbar-nav navbar-right">
+
+                    <li class="dropdown">
+                      <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="true">NHS Board <span class="caret"></span></a>
+                      <ul class="dropdown-menu" role="menu">
+                        <li><a href="/officers">Officers</a></li>
+                        <li><a href="/meeting-minutes">Meeting Minutes</a></li>
+                        <li class="divider"></li>
+                        <li><a href="/officer-videos">Officer Videos</a></li>
+                      </ul>
+                    </li>
+
+                    <li class="dropdown">
+                      <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="true">NHS Application <span class="caret"></span></a>
+                      <ul class="dropdown-menu" role="menu">
+                        <li><a href="https://docs.google.com/forms/d/1hzPFpOEE7YHrIIqAbHxaQoWm1m2WTcMqNjWlvezw2VE">BCA NHS Application</a></li>
+                        <li><a href="/requirements">Membership Requirements</a></li>
+                        <li class="divider"></li>
+                        <li><a href="/pillars">The Pillars</a></li>
+                        <li><a href="/bylaws">Chapter Bylaws</a></li>
+                      </ul>
+                    </li>
+
+                    <li class="dropdown">
+                      <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="true">Tutoring <span class="caret"></span></a>
+                      <ul class="dropdown-menu" role="menu">
+                        {% if signed_in %}
+                        <li><a href="/view">View Sessions</a></li>
+                        <li class="divider"></li>
+                        <li><a href="/logout"><b>SIGN OUT</b></a></li>
+                        <li><a href="/add">Add a Session</a></li>
+                        <li><a href="/my-sessions">View My Sessions</a></li>
+                        <li><a href="https://drive.google.com/file/d/0B-b_N1cpnpZ7WHAwcy1zd3ZaUmc/view?usp=sharing">Signoff Sheet</a></li>
+                        <li><a href="/points">Points</a></li>
+                        {% else %}
+                        <li><a href="/view">View Sessions</a></li>
+                        <li class="divider"></li>
+                        <li class="dropdown-header">NHS Members</li>
+                        <li><a href="/signup/tutor"><b>SIGN UP</b></a></li>
+                        <li><a href="/signin"><b>SIGN IN</b></a></li>
+                        <li><a href="https://drive.google.com/file/d/0B-b_N1cpnpZ7WHAwcy1zd3ZaUmc/view?usp=sharing">Signoff Sheet</a></li>
+                        <li><a href="/points">Points</a></li>
+                        {% endif %}
+                      </ul>
+                    </li>
+
+                    <li><a href="/pictures">Pictures</a></li>
+
+                </ul>
+            </div>
         </div>
-        
-        <div class="navbar-collapse collapse navbar-inverse-collapse">
 
-            <ul class="nav navbar-nav navbar-right">
-
-                <li class="dropdown">
-                  <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="true">Tutoring <span class="caret"></span></a>
-                  <ul class="dropdown-menu" role="menu">
-                    {% if signed_in %}
-                    <li><a href="/view">View Sessions</a></li>
-                    <li class="divider"></li>
-                    <li><a href="/logout"><b>SIGN OUT</b></a></li>
-                    <li><a href="/add">Add a Session</a></li>
-                    <li><a href="/my-sessions">View My Sessions</a></li>
-                    <li><a href="https://drive.google.com/file/d/0B-b_N1cpnpZ7WHAwcy1zd3ZaUmc/view?usp=sharing">Signoff Sheet</a></li>
-                    <li><a href="/points">Points</a></li>
-                    {% else %}
-                    <li><a href="/view">View Sessions</a></li>
-                    <li class="divider"></li>
-                    <li class="dropdown-header">NHS Members</li>
-                    <li><a href="/signup/tutor"><b>SIGN UP</b></a></li>
-                    <li><a href="/signin"><b>SIGN IN</b></a></li>
-                    <li><a href="https://drive.google.com/file/d/0B-b_N1cpnpZ7WHAwcy1zd3ZaUmc/view?usp=sharing">Signoff Sheet</a></li>
-                    <li><a href="/points">Points</a></li>
-                    {% endif %}
-                  </ul>
-                </li>
-
-            </ul>
-        </div>
-    </div>
     {% block content %}
     {% endblock %}
+    
 	</body>
 </html>
