Officer Page and Homepage Links

--- a/templates/index.html
+++ b/templates/index.html
@@ -12,7 +12,7 @@
         <div class="item active">
             <div class="fill" style="background-image:url('/static/img/slideshow/1.JPG');"></div>
             <div class="carousel-caption">
-                <h1><b>BERGEN COUNTY ACADEMIES</b><br><span class="white">National Honor Society</span></h1>
+                <h1>BERGEN COUNTY ACADEMIES<br><span class="white"><b>National Honor Society</b></span></h1>
             </div>
         </div>
         <div class="item">
