Added all new pages and features

--- a/templates/index.html
+++ b/templates/index.html
@@ -6,6 +6,7 @@
     <ol class="carousel-indicators">
         <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
         <li data-target="#myCarousel" data-slide-to="1"></li>
+        <li data-target="#myCarousel" data-slide-to="2"></li>
     </ol>
 
     <div class="carousel-inner">
@@ -19,6 +20,12 @@
             <div class="fill" style="background-image:url('/static/img/slideshow/2.JPG');"></div>
             <div class="carousel-caption">
                 <h1><a href="/officers">NHS BOARD</a></h1><h2>Have a question? Contact these board members.</h2>
+            </div>
+        </div>
+        <div class="item">
+            <div class="fill" style="background-image:url('/static/img/slideshow/3.JPG');"></div>
+            <div class="carousel-caption">
+                <h1><a href="https://drive.google.com/folderview?id=0B-b_N1cpnpZ7STdCWGhMMkVLQk0&usp=sharing">PICTURES</a></h1><h2>Check out the 2014 NHS Induction pictures!</h2>
             </div>
         </div>
     </div>
