--- a/templates/base.html
+++ b/templates/base.html
@@ -28,9 +28,9 @@
                       <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="true">NHS Board <span class="caret"></span></a>
                       <ul class="dropdown-menu" role="menu">
                         <li><a href="/officers">Officers</a></li>
-                        <li><a href="/meeting-minutes">Meeting Minutes</a></li>
-                        <li class="divider"></li>
+                        <!-- <li><a href="/meeting-minutes">Meeting Minutes</a></li> -->
                         <li><a href="/officer-videos">Officer Videos</a></li>
+                        <li><a href="/bylaws">Chapter Bylaws</a></li>
                       </ul>
                     </li>
 
@@ -39,9 +39,6 @@
                       <ul class="dropdown-menu" role="menu">
                         <li><a href="https://docs.google.com/forms/d/1hzPFpOEE7YHrIIqAbHxaQoWm1m2WTcMqNjWlvezw2VE">BCA NHS Application</a></li>
                         <li><a href="/requirements">Membership Requirements</a></li>
-                        <li class="divider"></li>
-                        <li><a href="/pillars">The Pillars</a></li>
-                        <li><a href="/bylaws">Chapter Bylaws</a></li>
                       </ul>
                     </li>
 
@@ -51,7 +48,7 @@
                         {% if signed_in %}
                         <li><a href="/view">View Sessions</a></li>
                         <li class="divider"></li>
-                        <li><a href="/logout"><b>SIGN OUT</b></a></li>
+                        <li><a href="/logout">Sign Out</a></li>
                         <li><a href="/add">Add a Session</a></li>
                         <li><a href="/my-sessions">View My Sessions</a></li>
                         <li><a href="https://drive.google.com/file/d/0B-b_N1cpnpZ7WHAwcy1zd3ZaUmc/view?usp=sharing">Signoff Sheet</a></li>
@@ -60,15 +57,15 @@
                         <li><a href="/view">View Sessions</a></li>
                         <li class="divider"></li>
                         <li class="dropdown-header">NHS Members</li>
-                        <li><a href="/signup/tutor"><b>SIGN UP</b></a></li>
-                        <li><a href="/signin"><b>SIGN IN</b></a></li>
+                        <li><a href="/signup/tutor">Sign Up</a></li>
+                        <li><a href="/signin">Sign In</a></li>
                         <li><a href="https://drive.google.com/file/d/0B-b_N1cpnpZ7WHAwcy1zd3ZaUmc/view?usp=sharing">Signoff Sheet</a></li>
                         <li><a href="/points">Points</a></li>
                         {% endif %}
                       </ul>
                     </li>
 
-                    <li><a href="/pictures">Pictures</a></li>
+                    <li><a href="https://drive.google.com/folderview?id=0B-b_N1cpnpZ7STdCWGhMMkVLQk0&usp=sharing">Pictures</a></li>
 
                 </ul>
             </div>
