Fundraising Director Description

--- a/templates/officers.html
+++ b/templates/officers.html
@@ -104,7 +104,7 @@
 		<div class="col-md-8">
 			<h2><b>Kiran Bhutada</b></h2>
 			<h4>Fundraising Director</h4>
-			<p>Need Description</p>
+			<p>The fundraiser director is responsible for raising money on behalf of the NHS. Each month, the fundraising director is responsible for orgaizing the NHS bake-sale. The fundraising director must make sure there are enough volunteers, collect donations, and help set up, sell and clean up. In addition, the fundraising director is responsible for organizing any fundraisers NHS has, such as the NHS Apparel sale. It is the fundraising director's responsibility to keep track of orders and send out e-mails notifying members of deadlines.</p>
 		</div>
 
 		<div class="col-md-4 text-center">
