--- a/templates/base.html
+++ b/templates/base.html
@@ -59,7 +59,7 @@
                         <li class="dropdown-header">NHS Members</li>
                         <li><a href="/signup/tutor">Sign Up</a></li>
                         <li><a href="/signin">Sign In</a></li>
-                        <li><a href="https://drive.google.com/file/d/0B-b_N1cpnpZ7WHAwcy1zd3ZaUmc/view?usp=sharing">Signoff Sheet</a></li>
+                        <li><a href="/signoff-sheet">Signoff Sheet</a></li>
                         <li><a href="/points">Points</a></li>
                         {% endif %}
                       </ul>
