--- a/templates/base.html
+++ b/templates/base.html
@@ -59,7 +59,7 @@
                         <li class="dropdown-header">NHS Members</li>
                         <li><a href="/signup/tutor">Sign Up</a></li>
                         <li><a href="/signin">Sign In</a></li>
-                        <li><a href="/signoff-sheet">Signoff Sheet</a></li>
+                        <li><a href="https://www.bcanhs.org/signoff-sheet">Signoff Sheet</a></li>
                         <li><a href="/points">Points</a></li>
                         {% endif %}
                       </ul>
