--- a/templates/officer-videos.html
+++ b/templates/officer-videos.html
@@ -5,70 +5,49 @@
 	<div class="row">
 		<div class="col-md-12">
 			<h1>Officer Videos</h1>
-			<h5>The NHS board has already been elected. Future candidates can use this page for ideas of what their video should be like.</h5>
+			<!-- <h5>The NHS board has already been elected. Future candidates can use this page for ideas of what their video should be like.</h5> -->
 			<hr>
 		</div>
 	</div>
 
 	<div class="row">
 		<div class="col-md-6">
-			<h2><b>Paige Stokols</b></h2>
+			<h2><b>Justin Linetski</b></h2>
 			<h4>President</h4>
-			<iframe width="100%" height="315" src="https://www.youtube.com/embed/B4f4ax139mw" frameborder="0" allowfullscreen></iframe>
+			<iframe width="100%" height="315" src="https://www.youtube.com/embed/TsrdCVDUTog" frameborder="0" allowfullscreen></iframe>
 		</div>
 
 		<div class="col-md-6">
-			<h2><b>Christine Lee</b></h2>
-			<h4>President</h4>
-			<iframe width="100%" height="315" src="https://www.youtube.com/embed/FZGKEZy5sb4" frameborder="0" allowfullscreen></iframe>
-		</div>
-	</div>
-	<hr>
-
-	<div class="row">
-		<div class="col-md-6">
-			<h2><b>Jonathan Chan</b></h2>
-			<h4>President</h4>
-			<iframe width="100%" height="315" src="https://www.youtube.com/embed/vW9Mffj027Y" frameborder="0" allowfullscreen></iframe>
-		</div>
-
-		<div class="col-md-6">
-			<h2><b>Elizabeth Brooks</b></h2>
-			<h4>President</h4>
-			<iframe width="100%" height="315" src="https://www.youtube.com/embed/Yaw7cT2GJGw" frameborder="0" allowfullscreen></iframe>
-		</div>
-	</div>
-	<hr>
-
-	<div class="row">
-		<div class="col-md-6">
-			<h2><b>Lydia Chen</b></h2>
-			<h4>President</h4>
-			<iframe width="100%" height="315" src="https://www.youtube.com/embed/VpnTPw1V7ds" frameborder="0" allowfullscreen></iframe>
-		</div>
-
-		<div class="col-md-6">
-			<h2><b>Akshay Swaminathan</b></h2>
+			<h2><b>Joey DeRose</b></h2>
 			<h4>Vice President</h4>
-			<iframe width="100%" height="315" src="https://www.youtube.com/embed/6aRDUGpO-X0" frameborder="0" allowfullscreen></iframe>
+			<iframe width="100%" height="315" src="https://www.youtube.com/embed/rsRykuco4ec" frameborder="0" allowfullscreen>
+			</iframe>
 		</div>
 	</div>
 	<hr>
 
 	<div class="row">
 		<div class="col-md-6">
-			<h2><b>Nick Caron</b></h2>
-			<h4>President</h4>
-			<iframe src="https://docs.google.com/file/d/0B9CF9EMjb_0lUVp6SzlQbjhSNzg/preview" width="100%" height="315"></iframe>
+			<h2><b>Debbie Lee</b></h2>
+			<h4>Vice President</h4>
+			<iframe width="100%" height="315" src="https://www.youtube.com/embed/msrZZFaSdLw" frameborder="0" allowfullscreen></iframe>
 		</div>
 
 		<div class="col-md-6">
-			<h2><b>Katie Duggan</b></h2>
+			<h2><b>Yashaar Hafizka</b></h2>
 			<h4>Vice President</h4>
-			<iframe width="100%" height="315" src="https://www.youtube.com/embed/0trpKcYw9JQ" frameborder="0" allowfullscreen></iframe>
+			<iframe width="100%" height="315" src="https://www.youtube.com/embed/x0WpXaeny_4" frameborder="0" allowfullscreen></iframe>
 		</div>
 	</div>
 	<hr>
 
+	<div class="row">
+		<div class="col-md-6">
+			<h2><b>Sanjana Suraneni</b></h2>
+			<h4>Vice President</h4>
+			<iframe width="100%" height="315" src="https://www.youtube.com/embed/Oj3RGQbg7Mo" frameborder="0" allowfullscreen></iframe>
+		</div>
+	</div>
+	<hr>
 </div>
 {% endblock %}
