--- a/templates/officer-videos.html
+++ b/templates/officer-videos.html
@@ -18,10 +18,9 @@
 		</div>
 
 		<div class="col-md-6">
-			<h2><b>Joey DeRose</b></h2>
-			<h4>Vice President</h4>
-			<iframe width="100%" height="315" src="https://www.youtube.com/embed/rsRykuco4ec" frameborder="0" allowfullscreen>
-			</iframe>
+			<h2><b>Yashaar Hafizka</b></h2>
+			<h4>President</h4>
+			<iframe width="100%" height="315" src="https://www.youtube.com/embed/x0WpXaeny_4" frameborder="0" allowfullscreen></iframe>
 		</div>
 	</div>
 	<hr>
@@ -34,9 +33,10 @@
 		</div>
 
 		<div class="col-md-6">
-			<h2><b>Yashaar Hafizka</b></h2>
+			<h2><b>Joey DeRose</b></h2>
 			<h4>Vice President</h4>
-			<iframe width="100%" height="315" src="https://www.youtube.com/embed/x0WpXaeny_4" frameborder="0" allowfullscreen></iframe>
+			<iframe width="100%" height="315" src="https://www.youtube.com/embed/rsRykuco4ec" frameborder="0" allowfullscreen>
+			</iframe>
 		</div>
 	</div>
 	<hr>
