Made edits and removed secret.py from git history

--- a/templates/officers.html
+++ b/templates/officers.html
@@ -11,7 +11,7 @@
 
 	<div class="row">
 		<div class="col-md-8">
-			<h2><b>Paige Stokols</b></h2>
+			<h2><b>Alex Lekan</b></h2>
 			<h4>NHS President</h4>
 			<p>The president of National Honor Society has oversight responsibility for all Board endeavors, and works closely with the vice president to lead weekly Board meetings to discuss upcoming events, as well as propose new ideas. It is important for the president to make a presence at all NHS-sponsored events. Some requirements of being president include having to give opening remarks at the annual NHS Induction Ceremony and leading open meetings. Often times the PPO, Academy parent organizations, clubs, Administration, or faculty members will reach out to the NHS president with a question or request. Thus it is imperative that the president maintain positive relationships with these organizations/individuals as well. The president's most important job is to share enthusiasm for NHS with the Board and rest of the organization!</p>
 		</div>
@@ -24,7 +24,7 @@
 
 	<div class="row">
 		<div class="col-md-8">
-			<h2><b>Akshay Swaminathan</b></h2>
+			<h2><b>Sanjana Suraneni</b></h2>
 			<h4>Vice President</h4>
 			<p>As NHS Vice President, you are the helping hand to every other NHS board member. It is your responsibility to make sure every board member is doing their job and if they need help you are there to help with tasks and give ideas. You work very closely with the President, discussing ideas and organizing event plans prior to mentioning them to other members. You make sure everything is organized and everyone is on the same level, aware of what is going on. You are also responsible of taking the president's role whenever he/she is unavailable, which can be during board meetings, open meetings, or even during NHS run events.</p>
 		</div>
@@ -37,7 +37,7 @@
 
 	<div class="row">
 		<div class="col-md-8">
-			<h2><b>Marissa Ferrara</b></h2>
+			<h2><b>Himani Patel</b></h2>
 			<h4>Secretary</h4>
 			<p>The secretary is responsible for recording all meetings that take place in order for them to be publicized one the website. This is important because we want the organization to be as transparent as possible. All members and applying members should be able to see everything that the board is accomplishing, and they should be aware of our discussions because all members should have the opportunity to input their ideas. The secretary is also responsible for sending out date reminder emails as well as information about upcoming events or reminders to the board members about their responsibilities. The secretary is also expected to help out the president and vice president in any way possible, and make every else’s job easier!</p>
 		</div>
@@ -50,7 +50,7 @@
 
 	<div class="row">
 		<div class="col-md-8">
-			<h2><b>Nicole Jisoo Kim</b></h2>
+			<h2><b>Bianca Pereira</b></h2>
 			<h4>Treasurer</h4>
 			<p>The primary role of the Treasurer is to manage the NHS funds and to keep track of membership dues and fees. He or she will work closely with the Fundraising Director in order to keep track of profits made during fundraising events such as bake sales. Additionally, the Treasurer must come up with financial strategies for NHS projects and report back to the President with information regarding funds. Experience with spreadsheets, organization, and mathematical skills are necessary to successfully carry out the responsibilities as Treasurer.</p>
 		</div>
@@ -63,7 +63,7 @@
 
 	<div class="row">
 		<div class="col-md-8">
-			<h2><b>Sneha Kabaria</b></h2>
+			<h2><b>Ah Jin Youn</b></h2>
 			<h4>Historian</h4>
 			<p>As historian, I am responsible for compiling memorabilia throughout the school year to chronicle NHS activities, as well as decorate and update the NHS bulletin board. I work closely with the other members of the board to really publicize what NHS is doing and keep members updated. As historian, your role in NHS will definitely be dynamic – you are really required to fill in and help out your fellow board members in various positions as they see fit. NHS is truly a team effort, and although you certainly will be busy with the work of a historian, you will also be expected to help out the other board members while also keeping on top of your own work.</p>
 		</div>
@@ -76,9 +76,9 @@
 
 	<div class="row">
 		<div class="col-md-8">
-			<h2><b>Benjamin Clauss</b></h2>
+			<h2><b>Robert Kim</b></h2>
 			<h4>Webmaster</h4>
-			<p>As webmaster you are tasked with maintaining the NHS website. This includes uploading meeting minutes, uploading pictures from events and managing the spreadsheet that keeps track of the tutoring hours and point system. In addition, when required, the webmaster will create new pages on the website. For instance, this year the NHS publication, "The Pillars" was introduced and a new page had to be created. Additionally, the website was reformatted this year and may need to be changed again as per the wishes of the board.</p>
+			<p>The webmaster is tasked with maintaining the NHS website. This includes uploading meeting minutes, uploading pictures from events and managing the spreadsheet that keeps track of the tutoring hours and point system. In addition, when required, the webmaster will create new pages on the website. For instance, this year the NHS publication, "The Pillars" was introduced and a new page had to be created. Additionally, the website was reformatted this year and may need to be changed again as per the wishes of the board.</p>h
 		</div>
 
 		<div class="col-md-4 text-center">
@@ -89,7 +89,20 @@
 
 	<div class="row">
 		<div class="col-md-8">
-			<h2><b>James Lubowsky</b></h2>
+			<h2><b>Hannah Ko</b></h2>
+			<h4>Induction Director</h4>
+			<p>The Induction Director is responsible for the planning and coordinating of the NHS induction in December, with the assistance of the advisor and the rest of the NHS Council. He/she will work with the advisor to make a program and the appropriate certificates for the induction. The Induction Director will be working closely with class parents.</p>
+		</div>
+
+		<div class="col-md-4 text-center">
+			<img src="" alt="" class="img-responsive img-thumbnail">
+		</div>
+	</div>
+	<hr>
+
+	<div class="row">
+		<div class="col-md-8">
+			<h2><b>Michelle Tu</b></h2>
 			<h4>Tutoring Director</h4>
 			<p>The NHS Tutoring Director helps NHS members fulfill the scholarship pillar. The main job of the tutoring director is to match up any student of Bergen County Academies with an NHS tutor using the online Google survey on the BCANHS website. This is a continual job that must be looked after every day. At the end of each trimester, the tutoring director must also record the hours of students on the BCA NHS website. Another important role of the tutoring director is to set up other tutoring initiatives. The central initiative this year is the SAT tutoring sessions set up on a monthly basis by the tutoring director. Other initiatives in the future could be AP and ACT tutoring sessions. An additional future challenge for the tutoring director is to innovate and update the system that hours are verified for NHStutors. Key skills for this position involve knowledge of Google Documents, ability to use email well, planning capabilities and communication.</p>
 		</div>
@@ -102,7 +115,7 @@
 
 	<div class="row">
 		<div class="col-md-8">
-			<h2><b>Kiran Bhutada</b></h2>
+			<h2><b>Ruchi Shah</b></h2>
 			<h4>Fundraising Director</h4>
 			<p>The fundraiser director is responsible for raising money on behalf of the NHS. Each month, the fundraising director is responsible for orgaizing the NHS bake-sale. The fundraising director must make sure there are enough volunteers, collect donations, and help set up, sell and clean up. In addition, the fundraising director is responsible for organizing any fundraisers NHS has, such as the NHS Apparel sale. It is the fundraising director's responsibility to keep track of orders and send out e-mails notifying members of deadlines.</p>
 		</div>
@@ -115,7 +128,7 @@
 
 	<div class="row">
 		<div class="col-md-8">
-			<h2><b>Mary Heck &amp; Carol Jeong</b></h2>
+			<h2><b>Soomin Kim</b></h2>
 			<h4>Community Service Directors</h4>
 			<p>Community service is a vital aspect of being a member of the National Honor Society, considering service is one of the four pillars of NHS. This position is one that is relatively new to the NHS Board, but is one that is extremely important. This position requires making sure every member meets their community service requirements for NHS and BCA. It also requires the proper documentation and management of the hours that each member completes through NHS sanctioned events on the NHS database. In addition, a wide variety of internal and external community service opportunities must be organized, so there is something that appeals to all members. This is the primary responsibility of this position and is one that must be attended to in a timely manner so that opportunities are available to members throughout the year. While this position may require a time commitment outside of school, it is one that is extremely rewarding and helps to foster a fundamental part of being an NHS member.</p>
 		</div>
