--- a/templates/officers.html
+++ b/templates/officers.html
@@ -78,7 +78,7 @@
 		<div class="col-md-8">
 			<h2><b>Robert Kim</b></h2>
 			<h4>Webmaster</h4>
-			<p>The webmaster is tasked with maintaining the NHS website. This includes uploading meeting minutes, uploading pictures from events and managing the spreadsheet that keeps track of the tutoring hours and point system. In addition, when required, the webmaster will create new pages on the website. For instance, this year the NHS publication, "The Pillars" was introduced and a new page had to be created. Additionally, the website was reformatted this year and may need to be changed again as per the wishes of the board.</p>h
+			<p>The webmaster is tasked with maintaining the NHS website. This includes uploading meeting minutes, uploading pictures from events and managing the spreadsheet that keeps track of the tutoring hours and point system. In addition, when required, the webmaster will create new pages on the website. For instance, this year the NHS publication, "The Pillars" was introduced and a new page had to be created. Additionally, the website was reformatted this year and may need to be changed again as per the wishes of the board.</p>
 		</div>
 
 		<div class="col-md-4 text-center">
