zhang to lawler

--- a/templates/points.html
+++ b/templates/points.html
@@ -12,7 +12,7 @@
 	<div class="row">
 		<div class="col-md-12">
 			<p>The below sheet is an audit of tutoring/service projects status for current NHS Members. If anything is not reflected here, please contact the Vice President and Tutoring Director.</p>
-			<p>NHS has a new point system which will be implemented to help organize events and provide incentives for members to contribute to the organization. The system works as follows: when an NHS member donates or contributes to a bake sale or helps the organization out in a way above and beyond what is expected from them, they will receive a point. Members with these points will receive priority when asking for a community service or field trip opportunity. If there are any questions pertaining to the point system, feel free to contact any NHS board member or Mr. Zhang.</p>
+			<p>NHS has a new point system which will be implemented to help organize events and provide incentives for members to contribute to the organization. The system works as follows: when an NHS member donates or contributes to a bake sale or helps the organization out in a way above and beyond what is expected from them, they will receive a point. Members with these points will receive priority when asking for a community service or field trip opportunity. If there are any questions pertaining to the point system, feel free to contact any NHS board member or Mrs. Lawler.</p>
 		</div>
 	</div>
 
