--- a/templates/requirements.html
+++ b/templates/requirements.html
@@ -67,7 +67,7 @@
 			<h4><b>Appeal Guidelines:</b></h4>
 			<ul>
 				<li><b>Juniors</b>: Due to the large volume of applications received each year, appeals made by Juniors will not be heard by the Faculty Council. Please reapply next fall.</li>
-				<li><b>Seniors</b>: If you wish to submit an appeal, please write a formal letter of appeal and submit it to Mr Zhang at 200 Hackensack Ave, Hackensack, NJ 07601 within 10 days of receiving the letter of non-admission.</li>
+				<li><b>Seniors</b>: If you wish to submit an appeal, please write a formal letter of appeal and submit it to Mrs. Lawler at 200 Hackensack Ave, Hackensack, NJ 07601 within 10 days of receiving the letter of non-admission.</li>
 			</ul>
 		</div>
 	</div>
