Updated requirements page for 2016 school year. Added NHS Calendar.

--- a/templates/base.html
+++ b/templates/base.html
@@ -59,13 +59,15 @@
                         <li class="dropdown-header">NHS Members</li>
                         <li><a href="/signup/tutor">Sign Up</a></li>
                         <li><a href="/signin">Sign In</a></li>
-                        <li><a href="https://www.bcanhs.org/signoff-sheet">Signoff Sheet</a></li>
+                        <li><a href="/signoff-sheet">Signoff Sheet</a></li>
                         <li><a href="/points">Points</a></li>
                         {% endif %}
                       </ul>
                     </li>
 
-                    <li><a href="https://drive.google.com/folderview?id=0B-b_N1cpnpZ7STdCWGhMMkVLQk0&usp=sharing">Pictures</a></li>
+                    <li><a href="/calendar">Calendar</a></li>
+
+                    <li><a target="_blank" href="https://drive.google.com/folderview?id=0B-b_N1cpnpZ7STdCWGhMMkVLQk0&usp=sharing">Pictures</a></li>
                 </ul>
             </div>
         </div>
