--- a/templates/requirements.html
+++ b/templates/requirements.html
@@ -11,9 +11,9 @@
 
 	<div class="row">
 		<div class="col-md-12">
-			<h4><b>The following are requirements for anyone wishing to apply to the BCA Chapter of the NHS:</b></h4>
+			<h4><b>Candidates: Requirements for membership consideration for the BCA Chapter of the NHS:</b></h4>
 			<ul>
-				<li><b>Scholarship</b>: Minimum 3.500 GPA at the end of sophomore/junior year as reflected on Naviance (3.499 is not 3.500).</li>
+				<li><b>Scholarship</b>: Minimum 3.750 GPA at the end of sophomore/junior year as reflected on Naviance (3.7499 is not 3.750).</li>
 				<li><b>Leadership</b>: Demonstrated leadership in and out of school with leadership qualities, skills, and experience (e.g. Vice President of Class Council).</li>
 				<li><b>Service</b>: At least 40 completed hours of community service for applying juniors and seniors (only 10 hours can be completed in-house).</li>
 				<li><b>Character</b>: Demonstrating trustworthiness, respect, responsibility, fairness, caring, and citizenship (student complies with school regulations, avoids cheating, and takes criticism willingly).</li>
@@ -23,12 +23,12 @@
 
 	<div class="row">
 		<div class="col-md-12">
-			<h4><b>NHS members must meet the following requirements at the end of junior year:</b></h4>
+			<h4><b>Members: NHS Members in good standing must meet the following requirements by the end of junior year:</b></h4>
 			<ul>
-				<li>A cumulative GPA of at least 3.500.</li>
+				<li>A cumulative GPA of at least 3.750.</li>
 				<li>At least 40 hours of community service.</li>
-				<li>Completion of at least 7 tutoring hours (these do not count towards community service) that were performed during junior year.</li>
-				<li>Completion 4 hours during second trimester and 3 hours during third trimester.</li>
+				<li>Completion of at least 8 tutoring hours (these do not count towards community service) that were performed during junior year.</li>
+				<li>Completion 4 hours during second trimester and 4 hours during third trimester.</li>
 				<li>Your hours must be logged by the end of each trimester.</li>
 				<li>Participation in at least one internal BCA service project and one external NHS service project during junior year.</li>
 			</ul>
@@ -37,12 +37,12 @@
 
 	<div class="row">
 		<div class="col-md-12">
-			<h4><b>NHS members must meet the following requirements at the end of senior year:</b></h4>
+			<h4><b>Members: NHS Members in good standing must meet the following requiremetns at the end of senior year:</b></h4>
 			<ul>
-				<li>A cumulative GPA of at least 3.500.</li>
+				<li>A cumulative GPA of at least 3.750 (or 3.500 for those inducted prior to 2016).</li>
 				<li>At least 50 hours of community service.</li>
-				<li>Completion of at least 10 tutoring hours (these do not count towards community service) that were performed during senior year.</li>
-				<li>You must complete 3 hours during first trimester, 4 hours during second trimester, and 3 hours during third trimester. This means that newly inducted seniors only have to complete 6 hours, since they were not in the NHS during first trimester.</li>
+				<li>Completion of at least 12 tutoring hours (these do not count towards community service) that were performed during senior year.</li>
+				<li>You must complete 4 hours during first trimester, 4 hours during second trimester, and 4 hours during third trimester. This means that newly inducted seniors only have to complete 8 hours, since they were not in the NHS during first trimester.</li>
 				<li>Participation in at least one internal BCA service project and one external NHS service project during senior year.</li>
 			</ul>
 		</div>
@@ -50,14 +50,13 @@
 
 	<div class="row">
 		<div class="col-md-12">
-			<h4><b>If your application is denied, here are possible reasons:</b></h4>
+			<h4><b>If you are not invited to join the BCA Chapter of NHS, here are possible reasons:</b></h4>
 			<ul>
-				<li>Your application may be denied because your cumulative GPA was not at least a 3.500, hence missing the pillar of scholarship.</li>
-				<li>Your application may be denied because the number of completed community service hours was not at least 40 hours.</li>
-				<li>Your application may be denied because your essay on scholarship did not demonstrate the qualities of scholarship. Scholarship is not only measured in one’s GPA; it is the enjoyment of learning and the passion for knowledge.</li>
-				<li>Your application may be denied because your essay on leadership did not demonstrate the qualities of a leader. Leadership is exhibited in managing multiple components and diverse people toward a common goal. Leaders typically gain their skills and experience through leadership positions in and out of school (e.g. Vice President of Class Council).</li>
-				<li>Your application may be denied because your essay on service did not demonstrate service. Service is exhibited in cheerfully assisting visitors, teachers, and students and volunteering dependable and well-organized assistance.</li>
-				<li>Your application may be denied because your essay on character did not demonstrate character. A student of character is one who demonstrates trustworthiness, respect, responsibility, fairness, caring, and citizenship. The student complies with school regulations, avoids cheating and plagiarism, and takes criticism willingly.</li>
+				<li>Candidates will not be selected if the GPA is not at least a 3.750, hence missing the pillar of scholarship.</li>
+				<li>Candidates may not be selected if the number of completed community service hours is below 40 hours.</li>
+				<li>Candidates may not be selected if responses do not demonstrate leadership.  Leadership is exhibited in managing multiple components and diverse people toward a common goal. Leaders typically gain their skills and experience through leadership positions in and out of school.</li>
+				<li>Candidates may not be selected if responses do not demonstrate service. Service is exhibited in cheerfully assisting visitors, teachers, and students and volunteering dependable and well-organized assistance.</li>
+				<li>Candidates may not be selected if responses do not demonstrate character. A student of character is one who demonstrates trustworthiness, respect, responsibility, fairness, caring, and citizenship. The student complies with school regulations, avoids cheating and plagiarism, and takes criticism willingly.</li>
 			</ul>
 		</div>
 	</div>
@@ -66,8 +65,8 @@
 		<div class="col-md-12">
 			<h4><b>Appeal Guidelines:</b></h4>
 			<ul>
-				<li><b>Juniors</b>: Due to the large volume of applications received each year, appeals made by Juniors will not be heard by the Faculty Council. Please reapply next fall.</li>
-				<li><b>Seniors</b>: If you wish to submit an appeal, please write a formal letter of appeal and submit it to Mrs. Lawler at 200 Hackensack Ave, Hackensack, NJ 07601 within 10 days of receiving the letter of non-admission.</li>
+				<li><b>Juniors</b>: Due to the large volume of applications received each year, appeals made by juniors will not be heard by the Faculty Council. Please reapply next fall.</li>
+				<li><b>Seniors</b>: If you wish to submit an appeal, please write a formal letter of appeal and submit it to Mrs. Lawler at 200 Hackensack Ave, Hackensack, NJ 07601 within 10 days of receiving the letter of non-selection.</li>
 			</ul>
 		</div>
 	</div>
